<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsageTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="screen_wake_up">Wake Up</string>
    <string name="screen_dim">Dim</string>
    <string name="screen_user_present">User Present</string>
    <string name="string_start">Start</string>
    <string name="string_stop">Stop</string>
    <string name="string_error_title">Permission Error</string>
    <string name="string_error_msg">This application needs permission to track your device usage. Press OK to navigate to Settings screen and grant access.</string>
    <string name="string_showBy">Show By</string>
    <string name="string_settings">Settings</string>
    <string name="string_Today">Today</string>
    <string name="string_Weekly">Weekly</string>
    <string name="string_Monthly">Monthly</string>
    <string name="string_Yearly">Yearly</string>
    <string name="string_Custom">Custom</string>
    <string name="string_start_date">Start Date</string>
    <string name="string_end_date">End Date</string>
    <string name="string_start_time">Start Time</string>
    <string name="string_stop_time">End Time</string>
    <string name="string_time_settings">Time Settings</string>
    <string name="string_other_settings">Other Settings</string>
    <string name="string_enabled">Enabled</string>
    <string name="string_auto_track">Auto Track Mode</string>
    <string name="string_when_to_start_tracking">When to start tracking.</string>
    <string name="string_when_to_stop_tracking">When to stop tracking.</string>
    <string name="string_turn_on_off_auto_track_mode">Enable Auto-Track mode to reduce battery consumption. Tracking will only be done between selected times.</string>
    <string name="string_error_end_date_greater_than_today">End date cannot be greater than Today date.</string>
    <string name="string_error_start_date_greater_than_today">Start date cannot be greater than Today date.</string>
    <string name="string_error_end_date_lesser_than_start">End date cannot be lesser than Start date.</string>
    <string name="string_select_apps_dialog_title">Select apps</string>
    <string name="string_filter_menu_enable_message">Create filter in Settings to view selected apps on list.</string>
    <string name="string_no_data_available_filtered_apps">No Usage Data for filtered apps for selected interval.</string>
    <string name="string_Ok">OK</string>
    <string name="string_Cancel">Cancel</string>
    <string name="string_notification_alert_pref_title">Notification Alerts</string>
    <string name="string_notification_alert_pref_summary">Notification alerts for applications when usage exceeds user defined duration.</string>
    <string name="string_filter_apps_pref_title">Application Filter</string>
    <string name="string_filter_apps_pref_summary">Create app filter to view selected applications on list.</string>
    <string name="string_select_packages_maximum_app_toast">You can not select more than %d applications.</string>
    <string name="string_total_time_apps">Total Time</string>
    <string name="string_start_tracking_no_data_navigate_apps">No Usage Data. Start tracking, and navigate to other applications.</string>
    <string name="string_start_tracking_no_data_music">No media data. Start tracking, and play a media file.</string>
    <string name="string_no_data_navigate_apps">No Usage Data is available for the selected interval.</string>
    <string name="string_no_data_music">No Media file has been played in the selected interval.</string>
    <string name="string_default_message_track_pref">Default Mode. Change to User Choice Mode for running Service in specific time interval. It will help us in saving your Battery.</string>
    <string name="string_user_choice_message_track_pref">User Choice Mode. The service will only run in the specified interval. It will reduce your Battery consumption.</string>
    <string name="string_title_track_pref">Tracking Mode</string>
    <string name="string_sort_by">Sort By</string>
    <string name="string_all">All</string>
    <string name="string_filter">Filter</string>
    <string name="string_duration_ascending">Duration (Ascending)</string>
    <string name="string_duration_descending">Duration (Descending)</string>
    <string name="string_application_name_ascending">App Name (Ascending)</string>
    <string name="string_application_name_descending">App Name (Descending)</string>
    <string name="string_most_recently_used">Most Recently Used</string>
    <string name="string_sort_order_none">None</string>
    <string name="string_uncheck_all">Uncheck All</string>
    <string name="string_title_low_battery_dialog">Low Battery</string>
    <string name="string_desc_low_battery_dialog">Device battery is critically low. Connect your device to a charger to start tracking.</string>
    <string name="string_title_low_memory_dialog">Low Memory</string>
    <string name="string_select_start_and_end_date">Select Start and End Date</string>
    <string name="string_desc_low_memory_dialog">Your device is running low on memory. Kill some applications using task manager and then retry starting tracking.</string>
    <string name="string_share">Share</string>
    <string name="string_notify_hours">Notify after %d hours.</string>
    <string name="string_notify_minutes">Notify after %d minutes.</string>
    <string name="string_notify_hours_minutes">Notify after %1$d hours and %2$d minutes.</string>
    <string name="string_swipe_pref_title">Share by Swipe Function</string>
    <string name="string_swipe_pref_off">Enable Swipe Feature on list items will let you share to your friends. But ripple effect will ont work.</string>
    <string name="string_swipe_pref_on">For enabling ripple effect on list item. Please disable Share by Swipe.</string>
    <string name="string_share_this_app">Share this app</string>
    <string name="string_share_this_app_with_a_friend">Share this app with a friend.</string>
    <string name="string_download_app">Download this awesome usage analytics app</string>
    <string name="string_feedback_and_suggestions">Feedback and Suggestions</string>
    <string name="string_feedback_and_suggestions_about_app">Provide feedback about this app.</string>
    <string name="string_send_feedback">Send Feedback</string>
    <string name="string_more_options">More Options</string>
    <string name="string_usage_alert">Usage Alert</string>
    <string name="string_time_duration_exceeded">Time duration exceeded for</string>
    <string name="string_this_month">This Month</string>
    <string name="string_tracking_started">Tracking Started.</string>
    <string name="string_tracking_stopped">Tracking Stopped.</string>
    <string name="string_share_item_content"><html><body>I used <b>%1$s</b> for <b>%2$s</b></body></html></string>
    <string name="string_sent_from">Sent from UsageTracker app.</string>
    <string name="abc"><html><body><b>bold</b><u>underline</u></body></html></string>
</resources>
