<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.asgj.android.appusage.activities.UsageListMainActivity" >
    
      <FrameLayout
          android:id="@+id/usage_list_main_fragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent" >
          <TextView
              android:id="@+id/showByOptions1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@android:color/white"
              android:background="@android:color/darker_gray"
              android:layout_gravity="bottom|right" />
          
           <TextView
              android:id="@+id/showByOptions2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:visibility="invisible"
              android:text="@string/string_Weekly"
              android:textColor="@android:color/white"
              android:background="@android:color/darker_gray"
              android:layout_gravity="bottom|right" />
           
            <TextView
              android:id="@+id/showByOptions3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:visibility="invisible"
              android:text="@string/string_Monthly"
              android:textColor="@android:color/white"
              android:background="@android:color/darker_gray"
              android:layout_gravity="bottom|right" />
            
             <TextView
              android:id="@+id/showByOptions4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:visibility="invisible"
              android:text="@string/string_Yearly"
              android:textColor="@android:color/white"
              android:background="@android:color/darker_gray"
              android:layout_gravity="bottom|right" />
             
              <TextView
              android:id="@+id/showByOptions5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:visibility="invisible"
              android:text="@string/string_Custom"
              android:textColor="@android:color/white"
              android:background="@android:color/darker_gray"
              android:layout_gravity="bottom|right" />

          </FrameLayout>
    
    
</LinearLayout>
